# hermes-dms

./: .gitignore  Cargo.toml  README.md  config.example.toml
.grepai/: config.yaml
contrib/: hermes-dms.service
dms-plugins/hermesLauncher/: HermesLauncher.qml  plugin.json
dms-plugins/hermesPanel/: HermesPanel.qml  HermesPanelChat.qml  HermesService.qml  plugin.json  qmldir
hermes-plugin/desktop/: adapter.py  plugin.yaml
src/: bridge.rs  config.rs  daemon.rs  lib.rs  main.rs  ollama.rs
src/desktop/: launch.rs  mod.rs  notify.rs  screenshot.rs
src/hermes/: client.rs  mod.rs  session.rs  sse.rs
src/ipc/: client.rs  mod.rs  protocol.rs  server.rs
src/mcp/: mod.rs  server.rs  tools.rs
